# user-microservice

./: .dockerignore  .env.compose.example  .env.example  .gitignore  Dockerfile.fly  GITLAB.txt  Makefile  README.md  docker-compose.yml  fly.toml  main.py  package-lock.json  push-gitlab.sh  render.yaml
budget-microservice/: .env  .env.example  Dockerfile  pyproject.toml  requirements.txt  run_migration.py
budget-microservice/app/: main.py
budget-microservice/migrations/: 001_schema.sql  002_budget_alerts.sql  003_household_scope.sql  003_spend_pace_event.sql  004_recurring_budget.sql
budget-microservice/tests/: test_budget_alert_processor.py
expense-microservice/: .dockerignore  .env  .env.example  Dockerfile  pyproject.toml  requirements.txt  run_migration.py
expense-microservice/app/: events.py  main.py
expense-microservice/migrations/: 001_schema.sql  002_receipt_file_bytes.sql  003_idempotency.sql  004_plaid.sql  005_income_and_recurring.sql  006_tags.sql  007_exchange_rate.sql  008_teller.sql  009_household_scope.sql  010_expense_import.sql  011_savings_goals.sql  012_anomaly_feedback.sql  013_receipt_ocr.sql  014_plaid_provider.sql  015_apple_wallet.sql  016_user_categorization_rule.sql  017_round_up_goal.sql  018_no_income_notification_dedup.sql  019_user_alert_preferences.sql  020_expense_match.sql  021_receipt_expense_nullable.sql  022_plaid_link_token.sql  023_income_apple_wallet_idempotency.sql  024_apple_wallet_sync_state.sql  025_classifier_corrections.sql  026_gmail_oauth.sql  (+4 more)
user-microservice/: .env.example  .gitignore  Dockerfile  fly.toml  main.py  pyproject.toml  requirements.txt  run_migration.py
(+590 files in other folders)
